Mut4All/bug-labels/rust/A-iterators/56912.txt
Issue Title:
[ICE] in librustc_metadata\schema.rs · Issue #56912 · rust-lang/rust · GitHub

Rust Code:
fn main() {
    let foo = [1];

    [[1, 2]]
    .iter()
    .map(|bar| foo
               .iter()
               .zip(&bar.iter().cycle())
               .map(|p| p));
}




error[E0277]: `&std::iter::Cycle<std::slice::Iter<'_, {integer}>>` is not an iterator
 --> C:\lavoro\bugs\test.rs:8:17
  |
8 |                .zip(&bar.iter().cycle())
  |                 ^^^ `&std::iter::Cycle<std::slice::Iter<'_, {integer}>>` is not an iterator
  |
  = help: the trait `std::iter::Iterator` is not implemented for `&std::iter::Cycle<std::slice::Iter<'_, {integer}>>`
  = note: required because of the requirements on the impl of `std::iter::IntoIterator` for `&std::iter::Cycle<std::slice::Iter<'_, {integer}>>`

thread 'main' panicked at 'internal error: entered unreachable code', src\librustc_metadata\schema.rs:300:39
stack backtrace:
   0: mingw_set_invalid_parameter_handler
...
  89: mingw_set_invalid_parameter_handler
  90: std::rt::lang_start::{{closure}}
  91: mingw_set_invalid_parameter_handler
  92: mingw_set_invalid_parameter_handler
  93: mingw_set_invalid_parameter_handler
  94: main
  95: _tmainCRTStartup
  96: mainCRTStartup
  97: mingw_set_invalid_parameter_handler
  98: mingw_set_invalid_parameter_handler
query stack during panic:
#0 [item_children] processing `core::num::dec2flt::rawfp`
#1 [all_traits] fetching all foreign and local traits
#2 [typeck_tables_of] processing `main`
#3 [typeck_item_bodies] type-checking all item bodies
end of query stack
error: aborting due to previous error


rustc 1.33.0-nightly (a8a2a887d 2018-12-16) running on x86_64-pc-windows-gnu

Bug Labels:
A-iterators, I-ICE, O-windows-gnu, T-compiler
